--- a/Fronte_End/pages/userPages/OrderDetails.html
+++ b/Fronte_End/pages/userPages/OrderDetails.html
@@ -33,314 +33,140 @@
 <header id="header" class="header fixed-top d-flex align-items-center">
 
     <div class="d-flex align-items-center justify-content-between">
-        <a href="../UserDashBoard.html" class="logo d-flex align-items-center">
-            <span class="d-none d-lg-block">Hello <span>Shoe.</span></span>
+        <a href="UserDashBoard.html" class="logo d-flex align-items-center">
+            <span class="d-none d-lg-block">Hello Shoe PVT</span>
         </a>
         <i class="bi bi-list toggle-sidebar-btn"></i>
     </div><!-- End Logo -->
 
-    <nav class="header-nav ms-auto">
-        <ul class="d-flex align-items-center">
-
-            <li class="nav-item d-block d-lg-none">
-                <a class="nav-link nav-icon search-bar-toggle " href="#">
-                    <i class="bi bi-search"></i>
-                </a>
-            </li><!-- End Search Icon-->
-
-            <li class="nav-item dropdown">
-
-                <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
-                    <i class="bi bi-bell"></i>
-                    <span class="badge bg-primary badge-number">4</span>
-                </a><!-- End Notification Icon -->
-
-                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow notifications">
-                    <li class="dropdown-header">
-                        You have 4 new notifications
-                        <a href="#"><span class="badge rounded-pill bg-primary p-2 ms-2">View all</span></a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li class="notification-item">
-                        <i class="bi bi-exclamation-circle text-warning"></i>
-                        <div>
-                            <h4>Lorem Ipsum</h4>
-                            <p>Quae dolorem earum veritatis oditseno</p>
-                            <p>30 min. ago</p>
-                        </div>
-                    </li>
-
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li class="notification-item">
-                        <i class="bi bi-x-circle text-danger"></i>
-                        <div>
-                            <h4>Atque rerum nesciunt</h4>
-                            <p>Quae dolorem earum veritatis oditseno</p>
-                            <p>1 hr. ago</p>
-                        </div>
-                    </li>
-
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li class="notification-item">
-                        <i class="bi bi-check-circle text-success"></i>
-                        <div>
-                            <h4>Sit rerum fuga</h4>
-                            <p>Quae dolorem earum veritatis oditseno</p>
-                            <p>2 hrs. ago</p>
-                        </div>
-                    </li>
-
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li class="notification-item">
-                        <i class="bi bi-info-circle text-primary"></i>
-                        <div>
-                            <h4>Dicta reprehenderit</h4>
-                            <p>Quae dolorem earum veritatis oditseno</p>
-                            <p>4 hrs. ago</p>
-                        </div>
-                    </li>
-
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-                    <li class="dropdown-footer">
-                        <a href="#">Show all notifications</a>
-                    </li>
-
-                </ul><!-- End Notification Dropdown Items -->
-
-            </li><!-- End Notification Nav -->
-
-            <li class="nav-item dropdown">
-
-                <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
-                    <i class="bi bi-chat-left-text"></i>
-                    <span class="badge bg-success badge-number">3</span>
-                </a><!-- End Messages Icon -->
-
-                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow messages">
-                    <li class="dropdown-header">
-                        You have 3 new messages
-                        <a href="#"><span class="badge rounded-pill bg-primary p-2 ms-2">View all</span></a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li class="message-item">
-                        <a href="#">
-                            <img src="../assets/img/massage/messages-1.jpg" alt="" class="rounded-circle">
-                            <div>
-                                <h4>Maria Hudson</h4>
-                                <p>Velit asperiores et ducimus soluta repudiandae labore officia est ut...</p>
-                                <p>4 hrs. ago</p>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li class="message-item">
-                        <a href="#">
-                            <img src="../assets/img/massage/messages-2.jpg" alt="" class="rounded-circle">
-                            <div>
-                                <h4>Anna Nelson</h4>
-                                <p>Velit asperiores et ducimus soluta repudiandae labore officia est ut...</p>
-                                <p>6 hrs. ago</p>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li class="message-item">
-                        <a href="#">
-                            <img src="../assets/img/massage/messages-3.jpg" alt="" class="rounded-circle">
-                            <div>
-                                <h4>David Muldon</h4>
-                                <p>Velit asperiores et ducimus soluta repudiandae labore officia est ut...</p>
-                                <p>8 hrs. ago</p>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li class="dropdown-footer">
-                        <a href="#">Show all messages</a>
-                    </li>
-
-                </ul><!-- End Messages Dropdown Items -->
-
-            </li><!-- End Messages Nav -->
-
-            <li class="nav-item dropdown pe-3">
-
-                <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-                    <img src="../assets/img/massage/profile-img.jpg" alt="Profile" class="rounded-circle">
-                    <span class="d-none d-md-block dropdown-toggle ps-2">K.L Samson</span>
-                </a><!-- End Profile Iamge Icon -->
-
-                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
-                    <li class="dropdown-header">
-                        <h6>K.L Samson</h6>
-                        <span>Manager</span>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li>
-                        <a class="dropdown-item d-flex align-items-center" href="">
-                            <i class="bi bi-person"></i>
-                            <span>My Profile</span>
-                        </a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li>
-                        <a class="dropdown-item d-flex align-items-center" href="">
-                            <i class="bi bi-gear"></i>
-                            <span>Account Settings</span>
-                        </a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li>
-                        <a class="dropdown-item d-flex align-items-center" href="">
-                            <i class="bi bi-question-circle"></i>
-                            <span>Need Help?</span>
-                        </a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li>
-                        <a class="dropdown-item d-flex align-items-center" href="login.html">
-                            <i class="bi bi-box-arrow-right"></i>
-                            <span>Sign Out</span>
-                        </a>
-                    </li>
-
-                </ul><!-- End Profile Dropdown Items -->
-            </li><!-- End Profile Nav -->
-
-        </ul>
-    </nav><!-- End Icons Navigation -->
+    <!-- End Icons Navigation -->
 
 </header>
 
-<main class="container-fluid" id="OrderDetails">
-    <!-- Order Header Start -->
-<!--    <div class="container d-flex flex-grow-1 flex-column">-->
-<!--        <div class="position-relative d-inline-block mt-3 mt-lg-4 mt-md-4">-->
-<!--            <h2 id="H1" style="font-family: 'Arial Rounded MT Bold',serif"><i-->
-<!--                    class="bi bi-cart-check"></i> Orders View-->
-<!--            </h2>-->
-<!--        </div>-->
-<!--    </div>-->
-    <!-- Order Header End -->
 
-    <!-- Order Header Section Start -->
-    <div class="container d-flex flex-grow-1 flex-column sectionBorder"
-         style="background-color: #dfe4ea;height: max-content">
-        <div class="position-relative d-inline-block mt-3 mt-lg-4 mt-md-4">
-            <h6 id="H6-4">Home > Orders Details</h6>
-            <hr>
-        </div>
-        <!-- Order Header Section End -->
+<aside id="sidebar" class="sidebar">
 
-        <!-- Order Details Section Start -->
-        <div class="row justify-content-around" style="height: max-content">
+    <ul class="sidebar-nav" id="sidebar-nav">
 
-            <div class="row justify-content-evenly h-50">
+        <li class="nav-item">
+            <a class="nav-link " href="../UserDashBoard.html">
+                <i class="bi bi-kanban"></i>
+                <span>Dashboard</span>
+            </a>
+        </li><!-- End Dashboard Nav -->
 
-                <!-- Table Order -->
-                <section
-                        class="d-flex flex-column h-100 col-10 col-xl-11 shadow-lg rounded-3 align-items-center pt-3 mt-2 mb-4 sectionBorder "
-                        style="background: white">
-                    <h4 class="text-center p-2 text-light rounded-5 col-12 ubFt" style="background: #16A085">Orders</h4>
-                    <!-- View Orders Table Start -->
-                    <div class="col-11 justify-content-around " style="height: 250px;">
-                        <div class="PlaceOrderTableDiv overflow-auto" style="height: 230px;">
-                            <table class="table table-success table-striped table-bordered table-hover">
-                                <thead class="text-light table-dark text-center  table-bordered sticky-top">
-                                <tr>
-                                    <th>Order Id</th>
-                                    <th>Order Date</th>
-                                    <th>Customer Id</th>
-                                </tr>
-                                </thead>
-                                <tbody id="tblOrder"></tbody>
-                            </table>
-                        </div>
+        <li class="nav-item">
+            <!--<a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
+                <i class="bi bi-kanban"></i><span>Manage</span><i class="bi bi-chevron-down ms-auto"></i>
+            </a>-->
+
+        <li class="nav-item">
+            <a class="nav-link collapsed" href="../userPages/Orders.html">
+                <i class="bi bi-kanban"></i>
+                <span>Sales</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link collapsed" href="../userPages/OrderDetails.html">
+                <i class="bi bi-kanban"></i>
+                <span>Sale Details</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link collapsed" href="../userPages/EmployeeDetails.html">
+                <i class="bi bi-kanban"></i>
+                <span>Employee Details</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link collapsed" href="../userPages/SupplierDetails.html">
+                <i class="bi bi-kanban"></i>
+                <span>Supplier Details</span>
+            </a>
+        </li>
+
+        <li class="nav-item">
+            <a class="nav-link collapsed" href="../login.html">
+                <i class="bi bi-kanban"></i>
+                <span>LogOut</span>
+            </a>
+        </li>
+        <!-- End Login Page Nav -->
+
+    </ul>
+
+</aside>
+
+<main id="main" class="main">
+    <div class="pageTitle" id="pagetwo">
+        <div class="row justify-content-around" style="height: min-content">
+
+            <section
+                    class="d-flex flex-column h-100 col-10 col-xl-11 shadow-lg rounded-3 align-items-center pt-3 mt-2 mb-4 sectionBorder "
+                    style="background: white">
+                <h4 class="text-center p-2 text-light rounded-5 col-12 ubFt" style="background: #275e27">SALES</h4>
+                <!-- View Orders Table Start -->
+                <div class="col-11 justify-content-around " style="height: 250px;">
+                    <div class="PlaceOrderTableDiv overflow-auto" style="height: 230px;">
+                        <table class="table table-success table-striped table-bordered table-hover">
+                            <thead class="text-light table-dark text-center  table-bordered sticky-top">
+                            <tr>
+                                <th>Sale Id</th>
+                                <th>Sale Date</th>
+                                <th>Total</th>
+                                <th>payment method</th>
+                                <th>total point</th>
+                                <th>cashier name</th>
+                                <th>customer id</th>
+                            </tr>
+                            </thead>
+                            <tbody id="tblOrder"></tbody>
+                        </table>
                     </div>
-                </section>
-                <!-- View Orders Table End -->
+                </div>
+            </section>
 
-                <!-- Table Order Details-->
-                <section
-                        class="d-flex flex-column h-100 col-10 col-xl-11 shadow-lg rounded-3 align-items-center pt-3 sectionBorder "
-                        style="background: white">
-                    <h4 class="text-center  p-2 text-light rounded-5 col-12 " style="background: #16A085">Orders
-                        Details</h4>
-                    <!-- View Order Details Table Start -->
-                    <div class="col-11 justify-content-around " style="height: 250px;">
-                        <div class="PlaceOrderTableDiv overflow-auto" style="height: 230px;">
-                            <table class="table table-success table-striped table-bordered table-hover">
-                                <thead class="text-light table-dark text-center  table-bordered sticky-top">
-                                <tr>
-                                    <th>Order Id</th>
-                                    <th>Item Code</th>
-                                    <th>Qty</th>
-                                    <th>Total</th>
-                                </tr>
-                                </thead>
-                                <tbody id="tblOrderDetails"></tbody>
-                            </table>
-                        </div>
+            <section
+                    class="d-flex flex-column h-100 col-10 col-xl-11 shadow-lg rounded-3 align-items-center pt-3 sectionBorder "
+                    style="background: white">
+                <h4 class="text-center  p-2 text-light rounded-5 col-12 " style="background: #275e27">SALES
+                    DETAILS</h4>
+                <!-- View Order Details Table Start -->
+                <div class="col-11 justify-content-around " style="height: 250px;">
+                    <div class="PlaceOrderTableDiv overflow-auto" style="height: 230px;">
+                        <table class="table table-success table-striped table-bordered table-hover">
+                            <thead class="text-light table-dark text-center  table-bordered sticky-top">
+                            <tr>
+                                <th>Sale Id</th>
+                                <th>Item Code</th>
+                                <th>Qty</th>
+                                <th>price</th>
+                            </tr>
+                            </thead>
+                            <tbody id="tblOrderDetails"></tbody>
+                        </table>
                     </div>
-                </section>
-                <!-- View Order Details Table End -->
+                </div>
+            </section>
 
-            </div>
 
         </div>
-        <!-- Order Details Section End -->
     </div>
+    <!-- End Customer Manage -->
+
 </main>
 
 <footer id="footer" class="footer">
-    <div class="copyright">
-        &copy; Copyright <strong><span>Hello Shoe PVT</span></strong>. All Rights Reserved
-    </div>
-    <div class="credits">
-        Designed by <a href="">Nethmi Thathsarani</a>
-    </div>
+<!--    <div class="copyright">-->
+<!--        &copy; Copyright <strong><span>Hello Shoe PVT</span></strong>. All Rights Reserved-->
+<!--    </div>-->
+<!--    <div class="credits">-->
+<!--        Designed by <a href="">Nethmi Thathsarani</a>-->
+<!--    </div>-->
 </footer><!-- End Footer -->
 
-<a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
-        class="bi bi-arrow-up-short"></i></a>
+<!--<a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i-->
+<!--        class="bi bi-arrow-up-short"></i></a>-->
 
 <!-- Vendor JS Files -->
 <script src="../../assets/vendor/apexcharts/apexcharts.min.js"></script>
