--- a/Fronte_End/pages/userPages/EmployeeDetails.html
+++ b/Fronte_End/pages/userPages/EmployeeDetails.html
@@ -34,296 +34,61 @@
 <header id="header" class="header fixed-top d-flex align-items-center">
 
     <div class="d-flex align-items-center justify-content-between">
-        <a href="../UserDashBoard.html" class="logo d-flex align-items-center">
-            <span class="d-none d-lg-block">Hello <span>Shoe.</span></span>
+        <a href="UserDashBoard.html" class="logo d-flex align-items-center">
+            <span class="d-none d-lg-block">Hello Shoe PVT</span>
         </a>
         <i class="bi bi-list toggle-sidebar-btn"></i>
     </div><!-- End Logo -->
 
-    <nav class="header-nav ms-auto">
-        <ul class="d-flex align-items-center">
-
-            <li class="nav-item d-block d-lg-none">
-                <a class="nav-link nav-icon search-bar-toggle " href="#">
-                    <i class="bi bi-search"></i>
-                </a>
-            </li><!-- End Search Icon-->
-
-            <li class="nav-item dropdown">
-
-                <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
-                    <i class="bi bi-bell"></i>
-                    <span class="badge bg-primary badge-number">4</span>
-                </a><!-- End Notification Icon -->
-
-                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow notifications">
-                    <li class="dropdown-header">
-                        You have 4 new notifications
-                        <a href="#"><span class="badge rounded-pill bg-primary p-2 ms-2">View all</span></a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li class="notification-item">
-                        <i class="bi bi-exclamation-circle text-warning"></i>
-                        <div>
-                            <h4>Lorem Ipsum</h4>
-                            <p>Quae dolorem earum veritatis oditseno</p>
-                            <p>30 min. ago</p>
-                        </div>
-                    </li>
-
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li class="notification-item">
-                        <i class="bi bi-x-circle text-danger"></i>
-                        <div>
-                            <h4>Atque rerum nesciunt</h4>
-                            <p>Quae dolorem earum veritatis oditseno</p>
-                            <p>1 hr. ago</p>
-                        </div>
-                    </li>
-
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li class="notification-item">
-                        <i class="bi bi-check-circle text-success"></i>
-                        <div>
-                            <h4>Sit rerum fuga</h4>
-                            <p>Quae dolorem earum veritatis oditseno</p>
-                            <p>2 hrs. ago</p>
-                        </div>
-                    </li>
-
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li class="notification-item">
-                        <i class="bi bi-info-circle text-primary"></i>
-                        <div>
-                            <h4>Dicta reprehenderit</h4>
-                            <p>Quae dolorem earum veritatis oditseno</p>
-                            <p>4 hrs. ago</p>
-                        </div>
-                    </li>
-
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-                    <li class="dropdown-footer">
-                        <a href="#">Show all notifications</a>
-                    </li>
-
-                </ul><!-- End Notification Dropdown Items -->
-
-            </li><!-- End Notification Nav -->
-
-            <li class="nav-item dropdown">
-
-                <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
-                    <i class="bi bi-chat-left-text"></i>
-                    <span class="badge bg-success badge-number">3</span>
-                </a><!-- End Messages Icon -->
-
-                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow messages">
-                    <li class="dropdown-header">
-                        You have 3 new messages
-                        <a href="#"><span class="badge rounded-pill bg-primary p-2 ms-2">View all</span></a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li class="message-item">
-                        <a href="#">
-                            <img src="../assets/img/massage/messages-1.jpg" alt="" class="rounded-circle">
-                            <div>
-                                <h4>Maria Hudson</h4>
-                                <p>Velit asperiores et ducimus soluta repudiandae labore officia est ut...</p>
-                                <p>4 hrs. ago</p>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li class="message-item">
-                        <a href="#">
-                            <img src="../assets/img/massage/messages-2.jpg" alt="" class="rounded-circle">
-                            <div>
-                                <h4>Anna Nelson</h4>
-                                <p>Velit asperiores et ducimus soluta repudiandae labore officia est ut...</p>
-                                <p>6 hrs. ago</p>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li class="message-item">
-                        <a href="#">
-                            <img src="../assets/img/massage/messages-3.jpg" alt="" class="rounded-circle">
-                            <div>
-                                <h4>David Muldon</h4>
-                                <p>Velit asperiores et ducimus soluta repudiandae labore officia est ut...</p>
-                                <p>8 hrs. ago</p>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li class="dropdown-footer">
-                        <a href="#">Show all messages</a>
-                    </li>
-
-                </ul><!-- End Messages Dropdown Items -->
-
-            </li><!-- End Messages Nav -->
-
-            <li class="nav-item dropdown pe-3">
-
-                <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-                    <img src="../assets/img/massage/profile-img.jpg" alt="Profile" class="rounded-circle">
-                    <span class="d-none d-md-block dropdown-toggle ps-2">K.L Samson</span>
-                </a><!-- End Profile Iamge Icon -->
-
-                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
-                    <li class="dropdown-header">
-                        <h6>K.L Samson</h6>
-                        <span>Manager</span>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li>
-                        <a class="dropdown-item d-flex align-items-center" href="">
-                            <i class="bi bi-person"></i>
-                            <span>My Profile</span>
-                        </a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li>
-                        <a class="dropdown-item d-flex align-items-center" href="">
-                            <i class="bi bi-gear"></i>
-                            <span>Account Settings</span>
-                        </a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li>
-                        <a class="dropdown-item d-flex align-items-center" href="">
-                            <i class="bi bi-question-circle"></i>
-                            <span>Need Help?</span>
-                        </a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-
-                    <li>
-                        <a class="dropdown-item d-flex align-items-center" href="login.html">
-                            <i class="bi bi-box-arrow-right"></i>
-                            <span>Sign Out</span>
-                        </a>
-                    </li>
-
-                </ul><!-- End Profile Dropdown Items -->
-            </li><!-- End Profile Nav -->
-
-        </ul>
-    </nav><!-- End Icons Navigation -->
+    <!-- End Icons Navigation -->
 
 </header>
-<!-- End Header -->
 
-<!-- ======= Sidebar ======= -->
+
 <aside id="sidebar" class="sidebar">
 
     <ul class="sidebar-nav" id="sidebar-nav">
 
         <li class="nav-item">
             <a class="nav-link " href="../UserDashBoard.html">
-                <i class="bi bi-grid"></i>
+                <i class="bi bi-kanban"></i>
                 <span>Dashboard</span>
             </a>
         </li><!-- End Dashboard Nav -->
 
         <li class="nav-item">
-            <a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
+            <!--<a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
                 <i class="bi bi-kanban"></i><span>Manage</span><i class="bi bi-chevron-down ms-auto"></i>
-            </a>
-            <ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-                <li>
-                    <a href="Orders.html">
-                        <i class="bi bi-circle"></i><span>Orders</span>
-                    </a>
-                </li>
-                <!--        <li>-->
-                <!--          <a href="adminPages/Employee.html">-->
-                <!--            <i class="bi bi-circle"></i><span>Employee</span>-->
-                <!--          </a>-->
-                <!--        </li>-->
-                <!--        <li>-->
-                <!--          <a href="adminPages/Supplier.html">-->
-                <!--            <i class="bi bi-circle"></i><span>Supplier</span>-->
-                <!--          </a>-->
-                <!--        </li>-->
-            </ul>
-        </li>
-        <!-- End Forms Nav -->
+            </a>-->
 
         <li class="nav-item">
-            <a class="nav-link collapsed" data-bs-target="#components-nav" data-bs-toggle="collapse" href="#">
-                <i class="bi bi-layout-text-window-reverse"></i><span>Details</span><i
-                    class="bi bi-chevron-down ms-auto"></i>
+            <a class="nav-link collapsed" href="../userPages/Orders.html">
+                <i class="bi bi-kanban"></i>
+                <span>Sales</span>
             </a>
-            <ul id="components-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-                <li>
-                    <a href="SupplierDetails.html">
-                        <i class="bi bi-circle"></i><span>Supplier Details</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="EmployeeDetails.html">
-                        <i class="bi bi-circle"></i><span>Employee Details</span>
-                    </a>
-                </li>
-            </ul>
-        </li><!-- End View Nav -->
-
-        <!--    <li class="nav-item">-->
-        <!--      <a class="nav-link collapsed" href="adminPages/CusomerRequest.html" id="myDetailsSection">-->
-        <!--        <i class="bi bi-kanban"></i>-->
-        <!--        <span>Rent Request</span>-->
-        <!--      </a>-->
-        <!--    </li>-->
-
-        <!--    <li class="nav-item">-->
-        <!--      <a class="nav-link collapsed" href="adminPages/IncomeDetails.html" id="incomeDetails">-->
-        <!--        <i class="bi bi-kanban"></i>-->
-        <!--        <span>Income Details</span>-->
-        <!--      </a>-->
-        <!--    </li>-->
+        </li>
+        <li class="nav-item">
+            <a class="nav-link collapsed" href="../userPages/OrderDetails.html">
+                <i class="bi bi-kanban"></i>
+                <span>Sale Details</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link collapsed" href="../userPages/EmployeeDetails.html">
+                <i class="bi bi-kanban"></i>
+                <span>Employee Details</span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link collapsed" href="../userPages/SupplierDetails.html">
+                <i class="bi bi-kanban"></i>
+                <span>Supplier Details</span>
+            </a>
+        </li>
 
         <li class="nav-item">
             <a class="nav-link collapsed" href="../login.html">
-                <i class="bi bi-box-arrow-in-right"></i>
+                <i class="bi bi-kanban"></i>
                 <span>LogOut</span>
             </a>
         </li>
@@ -338,15 +103,11 @@
 <main id="main" class="main">
 
     <section class="container-fluid mt-3" id="manageEmployee">
-        <nav>
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="../UserDashBoard.html">Home</a></li>
-                <li class="breadcrumb-item active">Details / Employee</li>
-            </ol>
-        </nav>
+        <h3>Employee <span style="color: darkmagenta">Details</span> </h3>
+
 
         <div class="row mt-3">
-            <div class="card info-card">
+            <div class="card info-card" style="background-color: #e6e6e6">
                 <div class="search-bar mt-4">
                     <div class="search-form d-flex align-items-center">
                         <input type="search" name="user_Id" id="search_EmployeeId" placeholder="Search" title="Enter search keyword">
@@ -355,16 +116,16 @@
                 </div>
 
             </div>
-            <div class="card info-card">
+            <div class="card info-card" style="background-color: #e6e6e6">
                 <!-- View Customer Details Table Start -->
-                <div class="card info-card">
+                <div class="card info-card" style="background-color: #e6e6e6">
                     <!-- View Customer Details Table Start -->
                     <div class="row mt-1 mt-md-2 mt-lg-4 mm-2 p-2 justify-content-around" style="height: 350px;">
                         <div class="col-11 justify-content-around sectionBorder"
                              style="height: 290px; background: white">
                             <div class="table-responsive customerTableDiv overflow-auto " style="height: 300px;">
                                 <table class="table table-light table-striped table-bordered table-hover">
-                                    <thead class="text-dark table-danger text-center  table-bordered sticky-top">
+                                    <thead class="text-white table-dark text-center  table-bordered sticky-top">
                                     <tr>
                                         <th scope="col">Employee code</th>
                                         <th scope="col">Employee name</th>
