--- a/Fronte_End/pages/userPages/Orders.html
+++ b/Fronte_End/pages/userPages/Orders.html
@@ -27,6 +27,7 @@
     <!-- Template Dashboard CSS File -->
     <link href="../../assets/css/dashboardStyle.css" rel="stylesheet">
 
+
 </head>
 <body>
 <header id="header" class="header fixed-top d-flex align-items-center">
@@ -108,7 +109,7 @@
                 <div class="row mt-1">
                     <div class="col-12 col-md-6 col-lg-6">
                         <label class="fw-bold" for="orderId">Sale ID </label>
-                        <input class="form-control border-dark" id="orderId" type="text" value="SAI-001">
+                        <input class="form-control border-dark" id="orderId" type="text">
                     </div>
                     <div class="col-12 col-md-6 col-lg-6">
                         <label class="fw-bold" for="orderDate">Sale Date </label>
@@ -117,21 +118,18 @@
                 </div>
                 <div class="row mt-1">
                     <div class="col-12 col-md-6 col-lg-6">
-                        <label class="fw-bold" for="cmbCustomerId">Customer ID </label>
-                        <select aria-label="Default select example" class="form-select border-dark" id="cmbCustomerId"
+                        <label class="fw-bold" for="Customer_Id">Customer ID </label>
+                        <select aria-label="Default select example" class="form-select border-dark" id="Customer_Id"
                                 value="Customer ID">
                         </select>
                     </div>
                     <div class="col-12 col-md-6 col-lg-6">
-                        <label class="fw-bold" for="customerName">Customer Name </label>
-                        <input class="form-control border-dark" disabled id="customerName" type="text">
+                        <label class="fw-bold" for="cusName">Customer Name </label>
+                        <input class="form-control border-dark" disabled id="cusName" type="text">
                     </div>
                 </div>
                 <div class="row mt-1">
-                    <div class="col-12 col-md-6 col-lg-6">
-                        <label class="fw-bold" for="cashierName">Cashier Name</label>
-                        <input class="form-control border-dark"  id="cashierName" type="text">
-                    </div>
+
 <!--                    <div class="col-12 col-md-6 col-lg-6">-->
 <!--                        <label class="fw-bold" for="customerSalary">Salary :</label>-->
 <!--                        <input class="form-control border-dark" disabled id="customerSalary" type="text">-->
@@ -145,8 +143,8 @@
                 <h5 class="text-center p-2 text-light rounded-3" style="background: #275e27">Item Details</h5>
                 <div class="row mt-1">
                     <div class="col-12 col-md-6 col-lg-6">
-                        <label class="fw-bold" for="cmbItemCode">Item Code :</label>
-                        <select aria-label="Default select example" class="form-select border-dark" id="cmbItemCode"
+                        <label class="fw-bold" for="Item_Code">Item Code :</label>
+                        <select aria-label="Default select example" class="form-select border-dark" id="Item_Code"
                                 value="Item Code">
                         </select>
                     </div>
@@ -174,6 +172,10 @@
                     <div class="col-12 col-md-6 col-lg-6 mt-4 ">
                         <button class="btn btn-success rounded-2" id="btnAddToCart" type="button">Add To Cart</button>
                     </div>
+                    <div class="col-12 col-md-6 col-lg-6">
+                        <label class="fw-bold" for="cashierName">Cashier Name</label>
+                        <input class="form-control border-dark"  id="cashierName" type="text" style="width: 360px">
+                    </div>
                 </div>
             </div>
             <!-- Order Item Details Section End -->
@@ -198,16 +200,35 @@
                         <input class="form-control border-dark" disabled id="txtSubTotal" type="number">
                     </div>
                     <div class="col-12 col-md-6 col-lg-6">
+                        <label class="fw-bold" for="payment">Payment</label>
+                        <select class="form-control border-dark" id="payment" name="payment">
+                            <option value="CARD">CARD</option>
+                            <option value="CASH">CASH</option>
+                        </select>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-6">
                         <label class="fw-bold" for="txtCash">Cash :</label>
                         <input class="form-control border-dark" id="txtCash" type="text">
                         <strong class="control-error" id="lblCheckSubtotal"></strong>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-6">
+                        <label class="fw-bold" for="txtBalance">Balance :</label>
+                        <input class="form-control border-dark" disabled id="txtBalance" type="number">
                     </div>
                 </div>
 
                 <div class="row mt-1">
                     <div class="col-12 col-md-6 col-lg-6">
-                        <label class="fw-bold" for="txtBalance">Balance :</label>
-                        <input class="form-control border-dark" disabled id="txtBalance" type="number">
+                        <label class="fw-bold" for="buyQty">Card No :</label>
+                        <input class="form-control border-dark" id="cardNUm" type="text">
+                        <strong class="control-error" id="lblCardNum"></strong>
+                    </div>
+
+<!--                    <strong class="control-error" id="lbl"></strong>-->
+                    <div class="col-12 col-md-6 col-lg-6">
+                        <label class="fw-bold" for="buyQty">Bank :</label>
+                        <input class="form-control border-dark" id="bankId" type="text">
+                        <strong class="control-error" id="lblBankId"></strong>
                     </div>
 
                     <div class="col-12 col-md-6 col-lg-6 mt-4">
@@ -215,8 +236,9 @@
                         <!-- Adding a non-breaking space for spacing -->
 <!--                        <button class="btn btn-primary rounded-2" id="btnCard" type="submit">Card</button>-->
                     </div>
+
                     <div class="col-12 col-md-6 col-lg-6 mt-4">
-                        <button class="btn btn-outline-light rounded-2" id="btnCard" type="submit" style="width: 260px; background-color: #12807e" >Card</button>
+                        <button class="btn btn-outline-light rounded-2" id="btnCard" type="submit" style="width: 100px; background-color: #12807e" >Card</button>
                         <!-- Adding a non-breaking space for spacing -->
                         <!--                        <button class="btn btn-primary rounded-2" id="btnCard" type="submit">Card</button>-->
                     </div>
@@ -282,8 +304,7 @@
 <script src="../../assets/js/dashboardMain.js"></script>
 
 <!-- Controller JS File -->
-<script src="../../controller/Reg_UserController.js"></script>
-<script src="../../controller/DashBoardController.js"></script>
+<script src="../../controller/OrderCotroller.js"></script>
 
 
 <!-- Util JS File -->
