--- a/Fronte_End/pages/userPages/Orders.html
+++ b/Fronte_End/pages/userPages/Orders.html
@@ -112,8 +112,8 @@
                         <input class="form-control border-dark" id="orderId" type="text">
                     </div>
                     <div class="col-12 col-md-6 col-lg-6">
-                        <label class="fw-bold" for="orderDate">Sale Date </label>
-                        <input class="form-control border-dark" id="orderDate" type="date">
+                        <label class="fw-bold" for="oDate">Sale Date </label>
+                        <input class="form-control border-dark" id="oDate" type="text">
                     </div>
                 </div>
                 <div class="row mt-1">
